--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,45 +1,25 @@
 .header {
-    padding: 20px 60px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    padding: 10px 0;
     background: #1d012f;
 
     &-body {
-
         display: flex;
-        justify-content: end;
+        justify-content: space-between;
     }
 }
 
 .container {
     max-width: 1280px;
+    margin: 0 auto;
     padding: 0 20px;
 }
 
-
-
-.customer {
-    &-btns {
-        display: flex;
-        gap: 20px;
-    }
-    &-btn {
-        position: relative;
-        svg {
-            width: 25px;
-            height: 25px;
-        }
-        span {
-            position: absolute;
-            right: -10px;
-            top: -10px;
-            background: #8e7d77;
-            width: 25px;
-            height: 25px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 10px;
-            border-radius: 50%;
-        }
-    }
-
+.customer-btns {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
