--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 101;
     background-color: rgba(41, 39, 39, 0.804);
     
     .modal {
