--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -10,6 +10,7 @@
         img {
             object-fit: cover;
             border-radius: 10px;
+            box-shadow: 0 0 10px #3b3f3f;
         }
 
         .favorite-btn {
