--- a/src/components/GoodsList/GoodList.scss
+++ b/src/components/GoodsList/GoodList.scss
@@ -1,10 +1,11 @@
 .goods-list {
     max-width: calc(270px * 4 + 150px);
+    min-height: 530px;
     list-style: none;
     display: grid;
     grid-template-columns: repeat(4, 270px);
     grid-auto-rows: auto;
     gap: 50px;
-    margin: 150px auto;
-    padding: 0;
+    margin: 0 auto;
+    padding: 160px 0 60px 0;
 }
