--- a/src/components/GoodsList/GoodList.scss
+++ b/src/components/GoodsList/GoodList.scss
@@ -6,6 +6,16 @@
     grid-template-columns: repeat(4, 270px);
     grid-auto-rows: auto;
     gap: 50px;
-    margin: 0 auto;
-    padding: 160px 0 60px 0;
+    margin: 70px auto;
+}
+
+.no-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    p {
+        font-size: 30px;
+    }
 }
