use store from redux in the whole app

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 101;
+    z-index: 100;
     background-color: rgba(41, 39, 39, 0.804);
     
     .modal {
@@ -16,7 +16,8 @@
         border-radius: 5px;
         color: #fff;
         overflow: hidden;
-        padding-bottom: 20px;   
+        padding-bottom: 20px;
+        text-align: center;
         position: relative;
 
         &__header {
