add total price

--- a/src/components/GoodsList/GoodList.scss
+++ b/src/components/GoodsList/GoodList.scss
@@ -1,20 +1,21 @@
 .list {
-    min-height: 530px;
-    margin: 70px auto;
+    margin: 20px auto;
     list-style: none;
-    padding: 0;
+    padding: 0 100px;
 }
 
 .container-cart.container-cart {
-    max-width: 700px;
+    max-width: 800px;
 }
 
 .goods-list {
+    min-height: 530px;
     max-width: calc(270px * 4 + 150px);
     display: grid;
     grid-template-columns: repeat(4, 270px);
     grid-auto-rows: auto;
     gap: 50px;
+    padding: 0;
 }
 
 .no-items {
