--- a/src/pages/Layout/Layout.scss
+++ b/src/pages/Layout/Layout.scss
@@ -1,8 +1,9 @@
 .main {
-    padding: 100px 0 40px;
+    padding: 120px 0 40px;
 }
 
 .page-title {
+    margin: 0 auto 55px;
     position: relative;
     font-size: 32px;
     &::after,
