fix popup determining

--- a/src/components/ViewSelect/ViewSelect.scss
+++ b/src/components/ViewSelect/ViewSelect.scss
@@ -13,9 +13,8 @@
     }
 
     &-select {
-        height: 30px;
-        width: 70px;
+        padding: 8px;
+        border-radius: 5px;
         font-size: 17px;
-        text-align: center;
     }
 }
